Update HTML files and assets for Fun Workshop theme; add .gitignore

--- a/program/index.html
+++ b/program/index.html
@@ -2,54 +2,55 @@
 <html lang='en'>
 
 <head>
+    <meta charset="UTF-8">
     <base href="..">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
     <script type="text/javascript" async
         src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=default">
     </script>
-    <meta name="description" content="Conference Template">
+    <meta name="description" content="Fun Workshop">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
-    <meta name="KeyWords" content="Conference">
-    <title>Program | Conference Template</title>
+    <meta name="KeyWords" content="Workshop">
+    <title>Program | Fun Workshop</title>
 </head>
 
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
+        <img src="assets/banner.jpg" alt="Fun Workshop Banner">
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">Fun</span><span class="title2">Workshop</span> <span class="year">2026</span>
         </div>
         <div class="bottom-right">
-            June 31, 2525 <br> University Name, and City Maybe
+            March - May, 2026 <br> XJTLU, Suzhou
         </div>
     </div>
 
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Conference Home Page" href=".">Home</a>
+                <a title="Workshop Home Page" href=".">Home</a>
             </td>
-            <td class="navigation">
+            <!-- <td class="navigation">
                 <a title="Register for the Conference" href="registration">Registration</a>
+            </td> -->
+            <td class="navigation">
+                <a class="current" title="Workshop Program" href="program">Program</a> 
             </td>
             <td class="navigation">
-                <a class="current" title="Conference Program" href="program">Program</a> 
+                <a title="Directions to the Workshop" href="directions">Directions</a>
             </td>
             <td class="navigation">
-                <a title="Directions to the Conference" href="directions">Directions</a>
-            </td>
-            <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
+                <a title="Workshop Flyer" href="flyer">Flyer</a>
             </td>
         </tr>
     </table>
 
-    <h2>Conference Program</h2>
+    <h2>Workshop Program</h2>
 
-    <table>
+    <!-- <table>
         <tr>
             <td class="date" rowspan="2">
                 8:30am
@@ -64,270 +65,267 @@
                 Notice that the title is styled differently than the ones for talks.
             </td>
         </tr>
-    </table>
+    </table> -->
 
-    <table id="PUTSPEAKERNAMEHERE">
+    <table id="Shiyao Zhang">
         <tr>
             <td class="date" rowspan="3">
-                9:00am
+                Week 2
             </td>
             <td class="title">
-                Interesting Title of a Talk 
+                Vision of MAS in our life
             </td>
         </tr>
         <tr>
             <td class="speaker">
-                Speaker Name (University)
+                Shiyao Zhang
             </td>
         </tr>
         <tr>
             <td class="abstract">
+                Here&rsquo;s an abstract.
+            </td>            
+            <!-- <td class="abstract">
                 Here&rsquo;s where you put the abstract of the talk. Notice that with MathJax you can include mathematical notation in the abstract like \(f(x)=3x-7\) or like \(h^0(X_t,\omega_{X_t}^{\otimes m})\) or whatever you want. Just notice the MathJax line in the head of this HTML document that allows this. I&rsquo;m going to blab just a tiny bit more in this abstract, but all the other abstracts below, except the ones for the plenary talks, will be just <i>Lorem Ipsum</i> text that needs to be replaced by real abstracts.
-            </td>
+            </td> -->
         </tr>
     </table>
 
-    <table id="PUTSPEAKERNAMEHERE">
+    <table id="Zitian Peng, Yuting Zheng">
         <tr>
             <td class="date" rowspan="3">
-                9:25am
+                Week 3
             </td>
             <td class="title">
-                Interesting Title of a Talk 
+                Thoughts on ADHD
             </td>
         </tr>
         <tr>
             <td class="speaker">
-                Speaker Name (University)
+                Zitian Peng, Yuting Zheng
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Filler text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
-            </td>
+                Here&rsquo;s an abstract.
+            </td>            
         </tr>
+
     </table>
 
-    <table id="PUTSPEAKERNAMEHERE">
+    <table id="Yuexin Li">
         <tr>
             <td class="date" rowspan="3">
-                9:50am
+                Week 
             </td>
             <td class="title">
-                Interesting Title of a Talk 
+                Vision and path on the project
             </td>
         </tr>
         <tr>
             <td class="speaker">
-                Speaker Name (University)
+                Yuexin Li
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Filler text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
-            </td>
+                Here&rsquo;s an abstract.
+            </td>            
         </tr>
     </table>
 
-    <table id="PUTSPEAKERNAMEHERE">
+    <table id="Siqi Liu, Shiyao Zhang">
         <tr>
             <td class="date" rowspan="3">
-                10:15am
+                Week 
             </td>
             <td class="title">
-                Interesting Title of a Talk 
+                小朋友 & 成人，谎言给我们力量
             </td>
         </tr>
         <tr>
             <td class="speaker">
-                Speaker Name (University)
+                Siqi Liu, Shiyao Zhang
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Filler text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
-            </td>
+                Here&rsquo;s an abstract.
+            </td>            
         </tr>
     </table>
 
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                10:40am
-            </td>
-            <td class="title-special">
-                Coffee &amp; Tea Break
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                <!-- Kept for Spacing -->
-            </td>
-        </tr>
-    </table>
-
-    <table class="plenary">
+    <table id="Yajing Liu">
         <tr>
             <td class="date" rowspan="3">
-                11:00am
+                Week 
             </td>
             <td class="title">
-                This is a Plenary Talk!
+                Story around 花甲部落
             </td>
         </tr>
         <tr>
             <td class="speaker">
-                Plenary Speaker
+                Yajing Liu
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Here&rsquo;s the abstract for the plenary talk! Notice again that the formatting of this time-block is a bit different that the rest of of the talks.
-                Filler text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
-            </td>
+                Here&rsquo;s an abstract.
+            </td>            
         </tr>
     </table>
 
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                Noon
-            </td>
-            <td class="title-special">
-                Lunch
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                <!-- Kept for Spacing -->
-            </td>
-        </tr>
-    </table>
-
-    <table id="PUTSPEAKERNAMEHERE">
+    <table id="Bingqing Chen">
         <tr>
             <td class="date" rowspan="3">
-                1:30pm
+                Week 
             </td>
             <td class="title">
-                Interesting Title of a Talk 
+                LLM interaction, art activity
             </td>
         </tr>
         <tr>
             <td class="speaker">
-                Speaker Name (University)
+                Bingqing Chen
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Filler text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
-            </td>
+                Here&rsquo;s an abstract.
+            </td>            
         </tr>
     </table>
 
-    <table id="PUTSPEAKERNAMEHERE">
+    <!-- <table id="SPEAKER-NAME">
         <tr>
             <td class="date" rowspan="3">
-                1:55pm
+                Week 8
             </td>
             <td class="title">
-                Interesting Title of a Talk 
+                Title of the Talk
             </td>
         </tr>
         <tr>
             <td class="speaker">
-                Speaker Name (University)
+                Speaker Name
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Filler text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
-            </td>
+                Here&rsquo;s an abstract.
+            </td>            
         </tr>
     </table>
 
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                2:50pm
-            </td>
-            <td class="title-special">
-                Coffee &amp; Tea Break
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                <!-- Kept for Spacing -->
-            </td>
-        </tr>
-    </table>
-
-    <table id="PUTSPEAKERNAMEHERE">
+    <table id="SPEAKER-NAME">
         <tr>
             <td class="date" rowspan="3">
-                3:10pm
+                Week 9
             </td>
             <td class="title">
-                Interesting Title of a Talk 
+                Title of the Talk
             </td>
         </tr>
         <tr>
             <td class="speaker">
-                Speaker Name (University)
+                Speaker Name
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Filler text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
-            </td>
+                Here&rsquo;s an abstract.
+            </td>            
         </tr>
     </table>
 
-    <table id="PUTSPEAKERNAMEHERE">
+    <table id="SPEAKER-NAME">
         <tr>
             <td class="date" rowspan="3">
-                3:35pm
+                Week 10
             </td>
             <td class="title">
-                Interesting Title of a Talk 
+                Title of the Talk
             </td>
         </tr>
         <tr>
             <td class="speaker">
-                Speaker Name (University)
+                Speaker Name
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Filler text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
-            </td>
+                Here&rsquo;s an abstract.
+            </td>            
         </tr>
     </table>
 
-    <table class="plenary">
+    <table id="SPEAKER-NAME">
         <tr>
             <td class="date" rowspan="3">
-                4:00pm
+                Week 11
             </td>
             <td class="title">
-                This is Another Plenary Talk!
+                Title of the Talk
             </td>
         </tr>
         <tr>
             <td class="speaker">
-                Plenary Speaker
+                Speaker Name
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Filler text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
-            </td>
+                Here&rsquo;s an abstract.
+            </td>            
         </tr>
     </table>
+
+    <table id="SPEAKER-NAME">
+        <tr>
+            <td class="date" rowspan="3">
+                Week 12
+            </td>
+            <td class="title">
+                Title of the Talk
+            </td>
+        </tr>
+        <tr>
+            <td class="speaker">
+                Speaker Name
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                Here&rsquo;s an abstract.
+            </td>            
+        </tr>
+    </table>
+
+    <table id="SPEAKER-NAME">
+        <tr>
+            <td class="date" rowspan="3">
+                Week 13
+            </td>
+            <td class="title">
+                Title of the Talk
+            </td>
+        </tr>
+        <tr>
+            <td class="speaker">
+                Speaker Name
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                Here&rsquo;s an abstract.
+            </td>            
+        </tr>
+    </table> -->
 
     <footer>
-        &copy; Conference Organizers
-        &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
+        &copy; Shiyao Zhang
+        &nbsp;|&nbsp; Template by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
 </body>
