--- a/directions/index.html
+++ b/directions/index.html
@@ -2,44 +2,45 @@
 <html lang='en'>
 
 <head>
+    <meta charset="UTF-8">
     <base href="..">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
-    <meta name="description" content="Conference Template">
+    <meta name="description" content="Fun Workshop">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
-    <meta name="KeyWords" content="Conference">
-    <title>Directions | Conference Template</title>
+    <meta name="KeyWords" content="Workshop">
+    <title>Directions | Fun Workshop</title>
 </head>
 
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
+        <img src="assets/banner.jpg" alt="Fun Workshop Banner">
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">Fun</span><span class="title2">Workshop</span> <span class="year">2026</span>
         </div>
         <div class="bottom-right">
-            June 31, 2525 <br> University Name, and City Maybe
+            March - May, 2026 <br> XJTLU, Suzhou
         </div>
     </div>
 
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Conference Home Page" href=".">Home</a>
+                <a title="Workshop Home Page" href=".">Home</a>
+            </td>
+            <!-- <td class="navigation">
+                <a title="Register for the Workshop" href="registration">Registration</a>
+            </td> -->
+            <td class="navigation">
+                <a title="Workshop Program" href="program">Program</a> 
             </td>
             <td class="navigation">
-                <a title="Register for the Conference" href="registration">Registration</a>
+                <a class="current" title="Directions to the Workshop" href="directions">Directions</a>
             </td>
             <td class="navigation">
-                <a title="Conference Program" href="program">Program</a> 
-            </td>
-            <td class="navigation">
-                <a class="current" title="Directions to the Conference" href="directions">Directions</a>
-            </td>
-            <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
+                <a title="Workshop Flyer" href="flyer">Flyer</a>
             </td>
         </tr>
     </table>
@@ -47,23 +48,23 @@
 
     <h2>Directions</h2>
     <p>
-        Here&rsquo;s where you can put directions to the conference,
-        and other information that will help attendees find the location,
-        and find the building, and register, and find local places they can stay, etc.
-        You can embed a <a href="https://www.google.com/maps">Google Maps</a> iframe
-        with directions to the conference like a did below.
-        It can also be helpful to include maps of the campus itself,
-        or pictures of the building the conference will be held in.
-        I&rsquo;ve opted to use a placeholder image of a kitten below.
+        Cozy Coffee: Ground floor, E building, XJTLU TC Campus
+        (<a href="https://j.map.baidu.com/04/2tUk">Baidu Map</a>)
+    </p>
+    <p>
+        An interactive & clean map below:
     </p>
 
-    <iframe class="directions" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d134998.56138929052!2d-121.98776790326531!3d37.869213445646146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808ff431db2f96d1%3A0x8b99d90a20aa67de!2sMt+Diablo!5e0!3m2!1sen!2sus!4v1561787340910!5m2!1sen!2sus"></iframe>
+    <iframe class="directions" src="https://www.openstreetmap.org/export/embed.html?bbox=121.15476965904237%2C31.482098229632538%2C121.15877151489259%2C31.48416830092601&amp;layer=mapnik&amp;marker=31.483134414690262%2C121.15677058696747"></iframe>
 
+    <p>
+        Image guide to Cozy Coffee below:
+    </p>
     <img class="center" src="assets/kitten4.jpg" alt="This is just a kitten right now" id="kitten">
 
     <footer>
-        &copy; Conference Organizers
-        &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
+        &copy; Shiyao Zhang
+        &nbsp;|&nbsp; Template by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
 </body>
