--- a/index.html
+++ b/index.html
@@ -2,44 +2,45 @@
 <html lang='en'>
 
 <head>
+    <meta charset="UTF-8">
     <base href=".">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
-    <meta name="description" content="Conference Template">
+    <meta name="description" content="Fun Workshop">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
-    <meta name="KeyWords" content="Conference">
-    <title>Conference Template</title>
+    <meta name="KeyWords" content="Workshop">
+    <title>Fun Workshop</title>
 </head>
 
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
+        <img src="assets/banner.jpg" alt="Fun Workshop Banner">
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">Fun</span><span class="title2">Workshop</span> <span class="year">2026</span>
         </div>
         <div class="bottom-right">
-            June 31, 2525 <br> University Name, and City Maybe
+            March - May, 2026 <br> XJTLU, Suzhou
         </div>
     </div>
 
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a class="current" title="Conference Home Page" href=".">Home</a>
+                <a class="current" title="Workshop Home Page" href=".">Home</a>
             </td>
-            <td class="navigation">
+            <!-- <td class="navigation">
                 <a title="Register for the Conference" href="registration">Registration</a>
+            </td> -->
+            <td class="navigation">
+                <a title="Workshop Program" href="program">Program</a> 
             </td>
             <td class="navigation">
-                <a title="Conference Program" href="program">Program</a> 
+                <a title="Directions to the Workshop" href="directions">Directions</a>
             </td>
             <td class="navigation">
-                <a title="Directions to the Conference" href="directions">Directions</a>
-            </td>
-            <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
+                <a title="Workshop Flyer" href="flyer">Flyer</a>
             </td>
         </tr>
     </table>
@@ -92,8 +93,8 @@
     </table>
 
     <footer>
-        &copy; Conference Organizers
-        &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
+        &copy; Shiyao Zhang
+        &nbsp;|&nbsp; Template by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
 </body>
