Add cozy map image and update workshop description in index.html

--- a/index.html
+++ b/index.html
@@ -45,24 +45,27 @@
         </tr>
     </table>
 
-    <h2>What is This Website?</h2>
+    <h2>About this workshop</h2>
     <p>
-        This website is a template that you could use for a (small) academic conference. 
-        It&rsquo;s got a page for registration, where you can embed a Google Form or some other way for participants to register.
-        It&rsquo;s got a program page to list the schedule for the conference.
-        It&rsquo;s got a directions page to add a bunch of instructions how to get to the conference.
-        It&rsquo;s got a page to put up the flyers and other promotional materials for folks to download.
+        This is for fun! Share your interesting projects with others.
+        Meet new friends who share your interests.
+        Learn new skills and have a great time!
     </p>
+
     <p>
-        You can use this template by cloning all the files from this
-        <a target="_blank" href="https://github.com/mikepierce/conference-website-template">GitHub repo here</a>.
-        This template was created from a website I made for 
-        <a target="_blank" href="http://math.ucr.edu/~mathconn/">MathConnections 2019</a>,
-        in case you want to see an example of this template being used in the wild.
+        The workshop will be held at XJTLU, Suzhou, China from March to May, 2026.
+        Stay tuned for more details about the schedule in the <a href="program">Program</a> page.
     </p>
+
     <p>
-        This paragraph is just some filler text to give the homepage some volume:
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
+        We welcome participants from all backgrounds and skill levels.
+        Whether you are a beginner or an experienced practitioner,
+        there is something for everyone at this workshop.
+        Join us for a fun and engaging experience!
+    </p>
+
+    <p>
+        For any questions, please contact the coordinator Shiyao Zhang at <a href="mailto:shiyao.zhang14@student.xjtlu.edu.cn">shiyao.zhang14@student.xjtlu.edu.cn</a>.
     </p>
 
     <h2>Organizers</h2>
@@ -75,8 +78,8 @@
     <table class="sponsors">
         <tr>
             <td class="sponsor">
-                <a href="http://www.eyebleach.me/">
-                    <img src="assets/kitten1.jpg" alt="First Sponsor Name">
+                <a href="https://github.com/xp-pgrs-unofficial-guide/xp_pgrs_unofficial_guide/">
+                    <img src="assets/kitten1.jpg" alt="Unofficial Guide for XJTLU PGRS">
                 </a>
             </td>
             <td class="sponsor">
@@ -88,6 +91,19 @@
                 <a href="http://www.eyebleach.me/">
                     <img src="assets/kitten3.jpg" alt="Third Sponsor Name">
                 </a>
+            </td>
+        </tr>
+        <tr>
+            <td class="sponsor">
+                <a href="https://github.com/xp-pgrs-unofficial-guide/xp_pgrs_unofficial_guide/">
+                    Unofficial Guide for XJTLU PGRS
+                </a>
+            </td>
+            <td class="sponsor">
+                Cozy Coffee
+            </td>
+            <td class="sponsor">
+                SentioKlub
             </td>
         </tr>
     </table>
