--- a/directions/index.html
+++ b/directions/index.html
@@ -51,11 +51,8 @@
         Cozy Coffee: Ground floor, E building, XJTLU TC Campus
         (<a href="https://j.map.baidu.com/04/2tUk">Baidu Map</a>)
     </p>
-    <p>
-        An interactive & clean map below:
-    </p>
 
-    <iframe class="directions" src="https://www.openstreetmap.org/export/embed.html?bbox=121.15476965904237%2C31.482098229632538%2C121.15877151489259%2C31.48416830092601&amp;layer=mapnik&amp;marker=31.483134414690262%2C121.15677058696747"></iframe>
+    <img class="center" src="assets/cozy-map.png" alt="Screenshot of Cozy Coffee location" id="kitten">
 
     <p>
         Image guide to Cozy Coffee below:
