--- a/program/index.html
+++ b/program/index.html
@@ -113,10 +113,12 @@
 
     </table>
 
+    <h2>Agreed Presenters and Topics</h2>
+
     <table id="Yuexin Li">
         <tr>
             <td class="date" rowspan="3">
-                Week 
+                <!-- Week  -->
             </td>
             <td class="title">
                 Vision and path on the project
@@ -137,7 +139,7 @@
     <table id="Siqi Liu, Shiyao Zhang">
         <tr>
             <td class="date" rowspan="3">
-                Week 
+                <!-- Week  -->
             </td>
             <td class="title">
                 小朋友 & 成人，谎言给我们力量
@@ -158,7 +160,7 @@
     <table id="Yajing Liu">
         <tr>
             <td class="date" rowspan="3">
-                Week 
+                <!-- Week  -->
             </td>
             <td class="title">
                 Story around 花甲部落
@@ -179,7 +181,7 @@
     <table id="Bingqing Chen">
         <tr>
             <td class="date" rowspan="3">
-                Week 
+                <!-- Week  -->
             </td>
             <td class="title">
                 LLM interaction, art activity
