--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </td>
             <td class="sponsor">
                 <a href="http://www.eyebleach.me/">
-                    <img src="assets/kitten3.jpg" alt="Third Sponsor Name">
+                    <img src="assets/sentio-logo.jpeg" alt="Third Sponsor Name">
                 </a>
             </td>
         </tr>
